# pikcolior

./: .gitignore  Cargo.toml  Makefile  Pikcolior.desktop  README.md
src/: main.rs
